# cheby

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  basic_interpolation.rs  segment_table.rs  typed_quantities.rs
src/: eval.rs  fit.rs  lib.rs  nodes.rs  scalar.rs  segment.rs
tests/: functional_pipeline.rs
